@@ -1,7 +1,7 @@
 # $Id$	-*-perl-*-
 
 use strict;
-use Test::More tests => 11;
+use Test::More tests => 14;
 
 
 use Net::DNS;
@@ -61,6 +61,12 @@ my $wire = '00010002033132333435363738396162636465666768696a6b6c6d6e6f7071727374
 	is( length($empty),  length($null), 'encoded RDATA can be empty' );
 	is( length($rxbin),  length($null), 'decoded RDATA can be empty' );
 	is( length($rxtext), length($null), 'string RDATA can be empty' );
+}
+
+{
+	is( Net::DNS::RR->new("foo IN CERT 0 2 3 foo")->format,	   0, 'format may be zero' );
+	is( Net::DNS::RR->new("foo IN CERT 1 0 3 foo")->tag,	   0, 'tag may be zero' );
+	is( Net::DNS::RR->new("foo IN CERT 1 2 0 foo")->algorithm, 0, 'algorithm may be zero' );
 }
 
 
